# cuda-playground

./: .gitignore  CMakeLists.txt  README.md  environment.yml  example.py  matmul.cu  mul.cu
include/tools/: cuda_intellisense.hpp
src/: CMakeLists.txt  main.cpp
src/kernels/: CMakeLists.txt  gemm_fma.cu  gemm_wmma.cu
src/utils/: reference.hpp  utils.hpp
tools/hooks/: format.hook
